# vita-kbl-loader

./: CMakeLists.txt  Makefile  README.md  kbl-loader.yml  kbl_loader.c  kbl_loader.h  main.c  payload_bootstrap.S  payload_bootstrap_main.c  payload_bootstrap_ns.ld  payload_bootstrap_ns_main.s  payload_bootstrap_ns_main_c.c
config/: config.txt  config_3.65.txt  config_3.72.txt
enso/: functions.h  lowio.c  syscon.c
loader/: CMakeLists.txt
loader/src/: corelock.S  main.c  resume.S
payload_boot/: CMakeLists.txt  arm_opcode.c  arm_opcode.h  hen.c  hen.h  link.x  main.c  reset.s
payload_boot/enso/: functions.h  lowio.h  syscon.c  syscon.h
payload_boot/src/: arm_opcode.c  arm_opcode.h  main.c  reset.s
payload_boot/src/enso/: functions.h  nsbl_.h  syscon.c
payload_scratchpad/: CMakeLists.txt  link.x  main.c  reset.S  reset_main.S
second-enso-for-kbl-loader/: CMakeLists.txt  Makefile  kbl_hen.c  second.c  second.x
